# Mr-Roller-the-Bot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deploy.sh  discordRollbot.py  infracost.yml  pyproject.toml
.github/workflows/: main.yml
docker/: Dockerfile
infra/pro/: .terraform.lock.hcl  iam.tf  main.tf
roller_bot/: database.py  main.py
roller_bot/checks/: admin.py  trade.py
roller_bot/clients/: admin_commands.py  check.py  database_bot.py  roller.py
roller_bot/clients/backends/: action_commands_backend.py  admin_commands_backend.py  embeds_backend.py  info_commands_backend.py  shop_commands_backend.py  user_commands_backend.py  user_verification_backend.py
roller_bot/clients/bots/: database_bot.py
roller_bot/cogs/: action_commands.py  admin_commands.py  backup_task.py  events.py  info_commands.py  random_event_task.py  shop_commands.py  sync_commands.py  user_commands.py
roller_bot/embeds/: bonus_embeds.py  inventory_embed.py  item_embed.py  message_embed.py  random_event_embed.py  shop_embed.py  stats_embed.py  trade_embed.py  use_result_embed.py  user_info_embed.py
roller_bot/items/: __init__.py  bonus_data.py  daily_streak_token.py  dice.py  donator_dice.py  gamble_dice.py  item.py  low_roller.py  reroll_token.py  utils.py
roller_bot/items/actions/: bonus_action.py  box_action.py  daily_streak_token_action.py  dice_action.py  glue_action.py  item_action.py  mirror_dice_action.py  reroll_token_action.py
roller_bot/items/dice/: donator_dice.py  gamble_dice.py  low_roller_dice.py  regular_dice.py
roller_bot/items/heals/: strong_glue.py  super_glue.py  weak_glue.py
roller_bot/items/models/: bonus.py  box.py  dice.py  glue.py  item.py  user_input_item.py
roller_bot/items/random_events/: big_dice_event.py  claim_item_event.py  user_luck_event.py
roller_bot/items/tokens/: daily_streak_token.py  reroll_token.py
roller_bot/migrations/: db_v0.py  db_v1.py  db_v2.py  db_v3.py  db_v4.py
roller_bot/models/: bonus.py  bonus_value.py  item_data.py  items.py  roll.py  user.py
roller_bot/protocols/: random_event.py  random_event_creator.py
roller_bot/utils/: assets_resolvers.py  asyncs.py  discord.py  enrichments.py  list_helpers.py  orm_helpers.py  random_lists.py
roller_bot/views/: accept_view.py  buy_item_view.py  inventory_view.py  items_select.py  random_event_view.py  select_item_view.py  shop_items_select.py  trade_view.py  usable_item_view.py
(+16 files in other folders)
