[tool.poetry]
name = "mr-roller-the-bot"
version = "0.11.9"
description = "A discord bot for daily dice roller game"
authors = ["Vegard Bjørsvik <vegardbjr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "roller_bot" }]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.1.0"
SQLAlchemy = "^1.4.44"
pydantic = "^1.10.6"
python-dotenv = "^1.0.0"
click = "^8.1.3"
boto3 = "^1.26.87"
sentry-sdk = "^1.16.0"
psycopg2-binary = "^2.9.6"

[tool.poetry.scripts]
migrate = "roller_bot.main:migrate"
bot = "roller_bot.main:main"

[tool.poetry.group.dev.dependencies]
black = { version = "^22.10.0", allow-prereleases = true }
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
